
3.96  2013-04-16
  - Improved default descriptions in Test::Mojo.
  - Improved documentation.
  - Improved tests.

3.95  2013-04-12
  - Added finished_ok method to Test::Mojo.
  - Removed deprecated slurp_rel_file method from Mojo::Home.
  - Removed deprecated html_escape function from Mojo::Util.
  - Improved Mojo::Transaction::WebSocket with support for status codes and
    reasons.
  - Improved documentation. (jberger, sri)
  - Improved tests.
  - Fixed message size limit bug in Mojo::Transaction::WebSocket.
  - Fixed a few small timing bugs in Mojo::Server::Daemon.
  - Fixed small description bug in Test::Mojo.

3.94  2013-04-08
  - Added is_hidden method to Mojolicious::Routes.
  - Removed deprecated start method from Mojolicious::Commands.
  - Improved documentation.
  - Improved tests.
  - Fixed small selector bug in get command.
  - Fixed small anchor bug in Mojolicious::Plugin::PODRenderer.

3.93  2013-04-05
  - Deprecated Mojo::IOLoop::Delay::end in favor of generated callbacks.
  - Improved Mojo::IOLoop::Delay to be able to generate callbacks that can
    capture all arguments.
  - Improved prefork command to allow -a and -L values below 1 second.
  - Improved documentation.
  - Improved tests.
  - Fixed multiple timing bugs in Mojo::IOLoop::Delay.

3.92  2013-04-03
  - Added monotonic clock support to make Mojolicious more resilient to time
    jumps.
  - Added steady_time function to Mojo::Util.
  - Removed deprecated namespace method from Mojolicious::Routes.
  - Removed deprecated base_tag helper.
  - Improved WebSocket send method to stringify objects. (jberger)
  - Improved version command to show required versions of optional
    dependencies.
  - Improved documentation.
  - Improved tests.
  - Fixed RFC 6901 compliance of Mojo::JSON::Pointer. (jberger, sri)
  - Fixed a few small Unicode bugs in get command.

3.91  2013-03-17
  - Improved bad charset handling in Mojo::DOM::HTML.
  - Improved documentation.
  - Improved tests.